fix firefox scrollbar

--- a/src/app/components/repositories/repositories.component.scss
+++ b/src/app/components/repositories/repositories.component.scss
@@ -4,9 +4,6 @@
     height: 602px;
     margin-top: 40px;
     padding: 34px 0px 40px 38px;
-    // display: flex;
-    // justify-content: center;
-    // // align-items: center;
     scroll-padding: 50px 0 50px 0;
     &__container {
         display: flex;
@@ -16,61 +13,13 @@
         height: 525px;
         width: 1149px;
         position: relative;
-        // &::after {
-        //     content: "";
-        //     width: 100%;
-        //     height: 50px;
-        //     background-color: black;
-        //     position: absolute;
-        //     bottom: 0;
-        //     z-index: 100;
-        // }
-        &::-webkit-scrollbar {
-            width: 4px;
-        }
-        &::-webkit-scrollbar-track {
-            background-color: $color-scrollbar-thumb;
-            // box-shadow: inset 0 0 30px 30px $color-scrollbar-thumb;
-            // border: solid transparent;
-            // border-width: 0px 13px;
-            border-radius: 50px;
-        }
-        &::-webkit-scrollbar-thumb {
-            background-color: $color-scrollbar-track;
-            // box-shadow: inset 0 0 30px 30px $color-scrollbar-track;
-            // border: solid transparent;
-            // border-width: 0px 13px;
-            border-radius: 50px;
-        }
     }
-    // &::-webkit-scrollbar {
-    //     width: 30px;
-    //     height: 18px;
-    // }
-    // &::-webkit-scrollbar-thumb {
-    //     height: 6px;
-    //     border: 4px solid rgba(0, 0, 0, 0);
-    //     border-width: 40px 13px;
-    //     padding: 10px 0;
-    //     background-clip: padding-box;
-    //     -webkit-border-radius: 7px;
-    //     background-color: rgba(0, 0, 0, 0.15);
-    //     // -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-    // }
-    // &::-webkit-scrollbar-button {
-    //     width: 0;
-    //     height: 0;
-    //     display: none;
-    // }
-    // &::-webkit-scrollbar-corner {
-    //     background-color: transparent;
-    // }
     .repository {
         background: $color-light-blue;
         border-radius: 10px;
         flex-basis: 555px;
         flex-grow: 0;
-        height: 130px;
+        min-height: 130px;
         display: flex;
         margin-bottom: 20px;
         &:nth-child(odd) {
@@ -102,6 +51,7 @@
             line-height: 12px;
             color: $color-light-purple;
             margin-top: 8px;
+            margin-bottom: 5px;
         }
         &__arrowLink {
             width: 50px;
@@ -113,5 +63,3 @@
         }
     }
 }
-
-// .repository__description {}
